syntax = "proto3";

package conf;

option go_package = "github.com/tencat-dev/go-base/internal/conf";

import "buf/validate/validate.proto";
import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
  Authz authz = 4;
}

message Server {
  HTTPServer http = 1;
  GRPCServer grpc = 2;
  PprofServer pprof = 3;
}

message HTTPServer {
  bool enable = 1;
  string network = 2;
  string addr = 3 [(buf.validate.field).required = true];
  google.protobuf.Duration timeout = 4;
}

message GRPCServer {
  bool enable = 1;
  string network = 2;
  string addr = 3 [(buf.validate.field).required = true];
  google.protobuf.Duration timeout = 4;
}

message PprofServer {
  bool enable = 1;
  string addr = 2 [(buf.validate.field).required = true];
}

message Data {
  DatabaseConfig database = 1;
  RedisConfig redis = 2;
}

message DatabaseConfig {
  string driver = 1 [(buf.validate.field).required = true];
  string dsn = 2 [(buf.validate.field).required = true];
}

message RedisConfig {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration read_timeout = 3;
  google.protobuf.Duration write_timeout = 4;
}

message Auth {
  JWT jwt = 1;
}

message JWT {
  string secret = 1 [(buf.validate.field).required = true];
}

message Authz {
  bool auto_sync = 1;
}